[project]
name = "ComfyUI-qwen-image-size-picker"
description = "A universal node for generating empty latent tensors with support for Qwen Image, SDXL and Flux models. Features extended aspect ratio support, batch processing, and flexible dimension overrides."
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/rzgarespo/ComfyUI-qwen-image-size-picker"


[tool.comfy]
PublisherId = "Rzgar Espo"
DisplayName = "ComfyUI-Qwen-Image-Size-Picker"
Icon = "📐"
